# nag-bot

./: .dockerignore  .env.example  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: ci.yml
config/: nagbot.example.yaml
design_system/: .thumbnail  QPH Intranet.html  SKILL.md  _adherence.oxlintrc.json  _ds_bundle.js  _ds_manifest.json  readme.md  styles.css
design_system/assets/: fonts.css
design_system/guidelines/: brand-elements.card.html  brand-icons.card.html  brand-logo.card.html  colors-areas.card.html  colors-brand.card.html  colors-grays.card.html  colors-status.card.html  spacing-radii.card.html  spacing-scale.card.html  spacing-shadows.card.html  type-body.card.html  type-display.card.html  type-heading-pattern.card.html  type-logo.card.html  type-scale.card.html
design_system/slides/: 01-portada.html  02-lista.html  03-galeria.html  04-tarjetas.html  05-timeline.html  06-gracias.html  slides.css
design_system/tokens/: colors.css  effects.css  spacing.css  typography.css
docs/: architecture.md  e7-escalation-runbook.md  e7-escalation.md  po-checklist.md  prd.md  teams-setup.md
docs/epics/: e1-skeleton-config-glpi.md  e2-aging-email-pipeline.md  e3-lite-backend.md  e4-escalation-rollup.md  e5-teams-live.md  e6-whatsapp-live.md  e7-urgent-p0-escalation.md
docs/source/: glpi-nagbot-strategy.md
docs/stories/: e1-s1-scaffold-ci.md  e1-s2-config-loading.md  e1-s3-glpi-client.md  e1-s4-field-discovery.md  e2-s1-aging-tiers.md  (+23 more)
scripts/: probe_glpi_p0_fields.py  probe_glpi_p0_fields2.py
tests/: conftest.py
(+121 files in other folders)
