[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "nagbot"
description = "GLPI nagbot — daily per-owner digests of aging help-desk tickets"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
dynamic = ["version"]
dependencies = [
    "fastapi>=0.111",
    "uvicorn[standard]>=0.30",
    "apscheduler>=3.10,<4",
    "httpx>=0.27",
    "pydantic>=2.7",
    "pydantic-settings>=2.3",
    "jinja2>=3.1",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2",
    "respx>=0.21",
    "freezegun>=1.5",
    "ruff>=0.5",
    "mypy>=1.10",
    "types-pyyaml",
]

[project.scripts]
nagbot = "nagbot.main:main"

[tool.hatch.version]
path = "src/nagbot/__init__.py"

[tool.hatch.build.targets.wheel]
packages = ["src/nagbot"]

[tool.ruff]
line-length = 100
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "W", "I", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.11"
mypy_path = "src"
packages = ["nagbot"]
disallow_untyped_defs = true
warn_unused_ignores = true
warn_redundant_casts = true
no_implicit_optional = true
check_untyped_defs = true

[[tool.mypy.overrides]]
module = "apscheduler.*"
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
